vallex追加